@startuml Modul_B_Pengelolaan_Pembelian

' Pengaturan visual agar profesional dan fungsional
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam defaultFontName "Arial"
skinparam defaultFontSize 14
skinparam titleFontSize 20

title Pengelolaan Pembelian

    class PurchaseOrder {
        - id: Integer
        - orderNumber: String
        - supplierId: Integer
        - userId: Integer
        - total: Decimal
        - isArchived: Boolean
        - createdAt: DateTime
        + calculateTotal(): Decimal
        + addItem(item: PurchaseItem): void
        + editNote(items: List<PurchaseItem>): void
        + hardDelete(): void
        + reverseAverageCost(item: PurchaseItem): void
        + getSupplierDetail(): Supplier
    }

    class PurchaseItem {
        - id: Integer
        - purchaseId: Integer
        - productId: Integer
        - variantId: Integer
        - qty: Decimal
        - price: Decimal
        - costBefore: Decimal
        - subtotal: Decimal
        - unitFactorAtPurchase: Decimal
        + calculateSubtotal(): Decimal
        + calculateHPAllocation(): Decimal
        + getRelatedVariant(): ProductVariant
    }

    class Supplier {
        - id: Integer
        - name: String
        - phone: String
        - email: String
        - address: String
        + updateContact(phone: String, email: String): void
        + getPurchaseHistory(): List<PurchaseOrder>
    }

    ' Relationships
    PurchaseOrder "1" *-- "1..*" PurchaseItem : contains >
    PurchaseOrder "0..*" -- "1" Supplier : directed to >
    PurchaseItem "0..*" -- "1" ProductVariant : refers to >
    PurchaseItem "0..*" -- "1" Product : refers to >
    PurchaseOrder "0..*" -- "1" User : created by >



    class ProductVariant <<external>> {
        - id: Integer
        - name: String
        - sku: String
        ' Digunakan untuk update stok dan HPP
        + updateStock(amount: Decimal): void
        + recalculateHPP(newCost: Decimal, newQty: Decimal): void
    }
    class Product <<external>> {
        - id: Integer
        - name: String
        - sku: String
    }
    class User <<external>> {
        - id: Integer
        - name: String
    }




@enduml
